[gd_scene load_steps=12 format=3 uid="uid://b4tquk20pro6u"]

[ext_resource type="Texture2D" uid="uid://kr27i3vxh3r5" path="res://Basic pack/Sprout Lands - Sprites - Basic pack/Characters/Free Cow Sprites.png" id="1_gr3dv"]
[ext_resource type="Script" path="res://Scrips/Enemy.gd" id="1_syk7f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b0n50"]
size = Vector2(12, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_f7kiw"]
atlas = ExtResource("1_gr3dv")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ax3ev"]
atlas = ExtResource("1_gr3dv")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_83773"]
atlas = ExtResource("1_gr3dv")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b5hjm"]
atlas = ExtResource("1_gr3dv")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0pvts"]
atlas = ExtResource("1_gr3dv")
region = Rect2(32, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_trv8c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f7kiw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ax3ev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_83773")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b5hjm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0pvts")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_p0lm6"]
radius = 108.005

[sub_resource type="CircleShape2D" id="CircleShape2D_3shu7"]
radius = 17.0294

[node name="Enemy" type="CharacterBody2D"]
y_sort_enabled = true
script = ExtResource("1_syk7f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5.5)
shape = SubResource("RectangleShape2D_b0n50")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
position = Vector2(0, -3)
sprite_frames = SubResource("SpriteFrames_trv8c")
animation = &"run"

[node name="Area1" type="Area2D" parent="."]
position = Vector2(0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area1"]
shape = SubResource("CircleShape2D_p0lm6")

[node name="Area2" type="Area2D" parent="."]
position = Vector2(0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_3shu7")
debug_color = Color(0.976471, 0, 0.423529, 0.419608)

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="Area1" to="." method="_on_area_1_body_entered"]
[connection signal="body_exited" from="Area1" to="." method="_on_area_1_body_exited"]
[connection signal="body_entered" from="Area2" to="." method="_on_area_2_body_entered"]
[connection signal="body_exited" from="Area2" to="." method="_on_area_2_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
